syntax = "proto3";
package protogrpc;

option go_package = "pb/protogrpc";

import "google/api/annotations.proto";

message RequestUser {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string username = 4;
  int32 diamonds = 5;
  int32 total_points = 6;
  string email_verified_at = 7;
  string password = 8;
  string remember_token = 9;
  string created_at = 10;
  string updated_at = 11;
  int32 current_avatar = 12;
}

message ResponseUsers {
  int32 code = 1;
  repeated RequestUser data = 2;
}

message ResponseOneUser {
  int32 code = 1;
  RequestUser data = 2;
}

message IdUsers { int32 id = 1; }

message EmptyRequest {}

service UsersService {
  rpc GetUsers(EmptyRequest) returns (ResponseUsers) {
    option (google.api.http) = {
      get : "/api/users"
    };
  };
  rpc GetOneUsers(IdUsers) returns (ResponseOneUser) {
    option (google.api.http) = {
      get : "/api/user/{id}"
    };
  };
}
